# PrereqFlow

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Trabajo escrito/: portada.tex  principal.tex
data/: utp_sistemas.json
docs/: architecture.md  data-structures.md  flujo.md
examples/: administracion_empresas.json  arquitectura.json  biologia.json  contaduria_publica.json  derecho.json  enfermeria.json  generate_examples.py  ing_sistemas_utp.json  ingenieria_civil.json  ingenieria_electronica.json  ingenieria_quimica.json  medicina.json  psicologia.json
prereqflow/: __init__.py  __main__.py  editor.py  graph.py  io.py  models.py  planner.py  tracker.py  uploader.py  utils.py  visualization.py
prereqflow/modes/: __init__.py  editor_ui.py  planner_ui.py  tracker_ui.py  uploader_ui.py
tests/: test_editor.py  test_graph.py  test_io.py  test_planner.py  test_tracker.py  test_uploader.py
